# TaxonomicClassification-NGS-NN

./: README.md  classification.py  environment.txt  environment.yml  pyproject.toml  reproduce_results.py  reproduction.py  requirements.txt
docker/: Dockerfile
src/: pretrained_model.py  test_data.py  utils.py
training/prot_bert/: model.py  startup-hook.sh  trails.py  utils.py
training/prot_bert/configs/: frame_const.yaml  frame_distributed.yaml  species_const.yaml  species_distributed.yaml  species_hyperopt.yaml
